--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.merk]
+git = "https://github.com/nomic-io/merk"
+features = ["verify"]
+default-features = false
