--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,20 @@
 name = "merk-verify-client-example"
 version = "0.1.0"
 edition = "2018"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.merk]
-git = "https://github.com/nomic-io/merk"
+git = "https://github.com/QuantumExplorer/merk"
+branch = "improvement/proofRoot2"
 features = ["verify"]
 default-features = false
+
+
+[lib]
+name = "merkverify"
+crate-type = ["cdylib"]      # Creates dynamic lib
+
+[build-dependencies]
+cbindgen = "0.19"
