--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "merk-verify-client-example"
 version = "0.1.0"
 edition = "2018"
 build = "build.rs"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,8 +15,8 @@ default-features = false
 
 
 [lib]
-name = "merkverify"
-crate-type = ["cdylib"]      # Creates dynamic lib
+name = "merk_ios"
+crate-type = ["staticlib"]      # Creates dynamic lib
 
 [build-dependencies]
 cbindgen = "0.19"
