--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.merk]
-git = "https://github.com/QuantumExplorer/merk"
-branch = "improvement/proofRoot2"
+git = "https://github.com/dashevo/merk"
+branch = "v0.1-dev"
 features = ["verify"]
 default-features = false
 
