--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rs-merk-verify-c-binding"
 version = "0.1.1"
-edition = "2021"
+edition = "2018"
 build = "build.rs"
 publish = false
 
@@ -16,7 +16,7 @@ default-features = false
 
 [lib]
 name = "merk_ios"
-crate-type = ["staticlib"]      # Creates dynamic lib
+crate-type = ["staticlib", "cdylib"]      # Creates dynamic lib
 
 [build-dependencies]
 cbindgen = "0.19"
