--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 /.idea
 rs-merk-verify-c-binding.iml
 Cargo.lock
+/c/CMakeCache.txt
+/c/Makefile
+/c/cmake_install.cmake
+/c/cmake-build-debug/
+/c/CMakeFiles/
+/c/build/
+/c/Project.cbp
+/c/libmerk_ffi_test.cbp
+/c/bin/
