--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default-features = false
 
 [lib]
 name = "merk_ios"
-crate-type = ["staticlib"]      # Creates dynamic lib
+crate-type = ["staticlib", "cdylib"]      # Creates dynamic lib
 
 [build-dependencies]
 cbindgen = "0.19"
