[hide crate-type for use in main crate]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ default-features = false
 
 
 [lib]
-crate-type = ["staticlib", "cdylib"]      # Creates dynamic lib
 name = "merk"
+#crate-type = ["staticlib", "cdylib"]      # Creates dynamic lib
 
 [build-dependencies]
 cbindgen = "0.20.0"
